# PeakRDL-rawheader

./: CHANGELOG.md  README.md  RELEASE.md  REUSE.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
docs/: conf.py  configuring.rst  formats.rst  index.rst  licensing.rst  templates.rst
src/peakrdl_rawheader/: __peakrdl__.py  rawheader_fns.py  utils.py
src/peakrdl_rawheader/templates/: c.mako  c_header.tpl  ldh.mako  svh.mako  svh.tpl  svpkg.mako  svpkg.tpl
tests/: conftest.py  picobello.rdl  svh_pkg.sv  test_rawheader_generation.py
tests/input/: array.rdl  example.rdl  memory_attrs.rdl
tests/output/: array.h  array.ldh  array.no_memory.ldh  array.no_symbols.ldh  example.base_name.h  example.base_name.ldh  example.base_name.sv  example.base_name.svh  example.h  example.ldh  example.no_prefix.ldh  example.sv  example.svh  memory_attrs.ldh
